--- a/RabtBil-Musteri-Kayit-v2/FrmKayitlariGoster.resx
+++ b/RabtBil-Musteri-Kayit-v2/FrmKayitlariGoster.resx
@@ -123,6 +123,9 @@
   <metadata name="mnsKayitlariGoster.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>146, 21</value>
   </metadata>
+  <metadata name="tmrTarihSaat.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>299, 21</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>48</value>
   </metadata>
