--- a/RabtBil-Musteri-Kayit-v2/FrmAnaMenu.resx
+++ b/RabtBil-Musteri-Kayit-v2/FrmAnaMenu.resx
@@ -117,4 +117,207 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABh1JREFUaEPtmnWobUUUh6/dhS12YyCKYouBqIiiohggCnYXqGB3gdiofyiCgYFY
+        YIuFit3dCiKK3f19M859c/fZ+5yz4/j84/7g4+3Z9+yY2WvWWrPmjU2qWovBZrAr7AsHwJ6wHawKM8H/
+        UvODL3srfAV/D+APeBrOhnVhqmsd8OV/A1/wC7gZjoHtYU1YEZaGNWBj2A8ughfhL/C6N+AQmBX+U60E
+        D4Av8T1cAevBNFBHC8IR8Cp4r8/Bjk4LI9X0cDr4BezAKTAvtJUDsC08D3boKVgORqJF4FHwQbfD4lCm
+        hcFJfibcAHfDHXANXAAbQJWmg4PBQRLv06mWhw/hF/BBRc0Jh8IzYEcTzpn34CX4BPyS54Nyfl0Mq4XW
+        RK0AL4Bz6GhPdKFlQdv9FpysuXSjx0HyVO/CWaDrnRv6SVecnIQmWtRscA/495M80UaLwkfwDazuiUx6
+        pLfBBz0Om0Ddya65ngw7hNbY2Iz//ptkWzP2Gbr3RnJiPwa/wqaeyLQXeF7T2dkTHektuBfmCK0oXbJz
+        06/XKObonRyJg0Jrio4CbVfP4sTuUj7LextjDLJJuunPQOtwPg4t44QjoLfJ5ZfwQXoibXgU2gWM/A5U
+        HiA3Bwf2wtAaUveB7i93sc4Jzan4gFFob/ClrwqtKboO7OTKoTVA2qE3OTW0omaGd0DvVdecdoeH42Et
+        XQq+R3IEymTUwbw+tAbI3MmvkUfsE6B402F1GXhtXTl474PzIreAy8GvslRoVcgJ5twwd0rSg3wND4ZW
+        fTXtiDLx9FoTyqRVwHPHh1aF9NX+aP3QijocPFd0wcOqTUeMSyaUBto8RpmTvR4Py6VZGRvyi56FN+Nh
+        I7XpiDIlKg6uQdRzBuxSmWq4nkgy8npBWQoxrNp2ZCHQ5bsIS9oIvKeOpEd6BP94bGhF6dM9V8yx6qht
+        R9Qr8GQ8DJod7Nw5oVWQiZ4PdIIlpeheK5oW1EVHrobv4uG4PgbzsB7tBj5wrdCKMgAZO9qoi46cCN5j
+        gdCKegIMzj3aH/yx6UnSXdBvott5bbcfadVX9rccA/B8UKYDwXu4pEgyuXwtHk5Ucr3LhFaU64GX42Gp
+        jNhe0wU/wdpQpvRuxUHWLfdoD/DH+YpNd6wttlEXpnUkeI8893sE/No9Mv3wx3nguwSM9K6lm6qLjrjW
+        Ny3JF15aykPxcKJS6HeuJLkO95xr6KbqoiNm47kZWS76GfJUalwmafba4lmSqbsvYVrdVG07MgP8ANeG
+        VpST3nu6yCuVZUxXZ0malCmLE6up2nZkC/B653BSWq9ULn2NlH+CaUGSabPzpOmytm1H/BKWoeYKraib
+        wKqOdYVSWWvyoZYxk6yemA5Y5mmiNh1ZAn4HI3uSWcaPkJtaqaxkmNvkGbCm5cVV1cV+atMRMws7YiE8
+        ydqw99sytPrIRYw/3Ca0oryR5nUn1K1dnQsGu7pybmgJLnmTNCW9l4M9sNA9C5hfWbLM40fKd3KzG0Yu
+        masidpVcZ/gOH0BesUyTPJ/4fZXyrrymZafuB110l0W5opwDBjtNOU9gHZAvwQGunORF+dnMLE2d82Co
+        59A9G6BGJU3aeeE2Q65bQFNzH6aW7IAd8cXzKoYBSvNLMjh9CnXNJ8mixmnxcFy5q1WHgRZyRmg1kCbk
+        KJgFFwvMSS5uTBd0lcp4s2M8LJXZ9dbxMMg9FB1JnqLn8stozna4Tc4Xlr6Ohi9sGlOUncz3MNzz8MWS
+        igW688AAl0quunS9UNkXdbXqIDlnil+pkdyfsDNWxfOoXyY3ddxmSCrGkZ3A9qDykgmrX8KYZhGkM+nJ
+        HGmr4haUq+S+ulWOJAfBfC3Jr+q2XNXeo6tEKzl21jR9HuhcpjCWMH2I9dfKulIm7XqYDVNdqnHCTpvv
+        mRIN7WabyABlaV8XaUHZNYH/m6GptP19wIjtABknarvYNnIhlsr8vsBzYAVwQ+i3d2KMcuvZvZYbwfTF
+        6y1yGLFH+hX6aUmwWm8t1hdKaIIW1cwGzNH0XE5cvVD6jXHKLHYrGPl/Eqgj54zu1nXNbeBCzQ66RW0N
+        2cl7Jbiyc75NtdGf1KSG1tjYPywinl2y7MfdAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABCBJREFUaEPtmmnIVFUYx2+L2YIbLVKhSZtFe0GRGIhoKZYYGUG2o0aFWESrUF8C
+        0Q8GCqKIIhV+iPwg9CGFNqIPEa2a7VYYLbbvFpX+fufO0eN9552Zd977zkw5f/gx5znn3jvnmfuc5yxM
+        1lVXXTWkE2AGXN2hTIXhUFPXwV+wq8P5Gs6EXvU5vAV6PalD8a38Do9Dr9Lb5Xmxo/U2vJQXq+t/5cg7
+        sLLD+Q7qOrITvu9w/ob9J7S6jrRQpTlyCrwGVwSr9WrakZPgjLyYnQpOnD/C2VagC2Fugter0TAH0rZG
+        uBxqqWlH1sFvMBuiExdD1Gbw3sgToJZBWt8oZqWh0JuadmQUfAS2F51QR8IFCYeBGgznQ9rWCL7JWurX
+        GNEZf+mLgtVelTbY263SHDkclsA5wWq9mnbkYDgkLwYnnod/IWYX604skRFQS0078hh8AGPhBdCJOyDq
+        TfDesvgTBiRrTQDT7z9QdEJNhPtKxJ1qLfVrjLg72w63B6u9Km2wt1ulOuI66+i82HKV5shi8Nobg9V6
+        Ne3IA7AWTMHRCddfB4Fyxv+4D2yB06CaXN54rrYa7OyH8Cr4/dPB72zakdvAtm2Vz9QJZaZ5sg+Yzo+F
+        VK7L7oKvwO/4FdwqPFP51LY+LlqbDq0HoZoTZciFZVxBvwIzIS48o7Q907Ld63T4XKiqWo6ok+HAvFia
+        7Nwf8C1cY0UdHQBe50mK990MPVTPkbJ1NzjJvg7HWVHREfAwvAs/VD61XQpFeb332eeHrEjVSkceAb9v
+        IwyxoqJh4JiwzY56NPpGxbbe9ijv2wS23W9FVKscicljAwyyItEqsM3daKpbwXoP6FKZSX2OSyevCUod
+        KQ7o4tgo2vWuj+1uzNzKPgtmqlSGlHH/VLB6aj14gJ2GmNL2eT7X84N9HHkOHs2LQWaVe/Ni+BXNGjcF
+        K5/hTYmXBStPCr/AecHKsnHwM4yBOA8dA0WdDrbND1ZP3Qm2V5uDfJ5tizRSRz6Dp/NikB2Nbcap1y4M
+        VpadBdqGjBoP2tOClWXXgrb1MayKK2jl3JI+tyg7aXtxDlI+z7YQXhZiZ31VxTdyT14Mb+RL6Msb+Ql8
+        I4aTGzPDwJm6KPc2O2BksPZK+xtwwBflc3zeixDCNXVkoMaI8o26zHADdaUVidz72KlPwTnCmL+lYlt/
+        CaS6ChxXPm9PRnsfPgH3HNUOzspkAdgxKU5qbqG/AH/YiHYM1ah54P1b4Xgroi4FQyR9QKtYA2k2OhQm
+        g2/DT+0os9sK8L6X4SjoIW/wdKTawdlAYTjbKcPH5UcxTKMM1+vBqHHecE4ppvC2y7B5D3TIjnrcNAt8
+        GzfAUnCrbbtDYAp0rDx2MhPGyc1OR7StdzPndf8ZmYFcppvSXebX/ZNAV1111YiybDeFgRhQVYb5OgAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABSdJREFUaEPtmmeIJEUYhtesZ06cARQVI2YUMYsYUDFgwCxiDiAKiigq5pzAnBUV
+        MYIiBgTFjOgPAwZQMWFAxMCditnnqZ5vr7ZvZnamZ6ZE2Bcerqtmu6re7qqvQt/YlKY0eu0Pr8PHhfgA
+        boBpMDStB3/Ch/BAIV6Cf+A2WBKGoqPAQtdKqdFqTjgXfgLrlN/gMpgbBtKxYIErpNRodTNY1xNwIOwH
+        j7Ty7oOBVMrIJvA3aKauy8E2bJ9SDVXKyDlgPUun1EQtCH9AO5M9q5SRO+Hn6rKtvoRHq8tmKmXkbLCe
+        tVNqoqzb365IqYYqZcTyfSOG3sXNaGlheBp+hzXMaKpSRtQR4Jz1FdwCN8LnYBA4CQZSSSNqW3gKNPQX
+        PAs7w8AqbWQe2Ajeh2/hYjgPnJgNv0tBI5Uysik46f0K1tcJu9mbcAGsCD1r1Ebmg5vAOhzsd8HhsD4s
+        D4vCcrAh7AEXwWugIbvfveDvk2qURmzkq2D510MerSaTEcwVshPlj3AodNWojGjCrYFP1TfQVOuC5djG
+        C2EOaKtRGMlNHGLGgJofHgTbaTdta2bYRtxfdDIx2d5jXrgGDAquBPKthY2PsXa1GXUNYsTX/iR8A9+3
+        cH9RN2EjXBCav7IZHeSbdJAb2fzXslzuhyzndvC3zczI1dTIYvA1fAcPQez+fGp5JWHCOiRvWDu5U30G
+        NPwGaP5gCC0DlnNqSmVqamRX8L6dUqq9DL2uev27O8BGXQnddD/4ZlU+1lzeqKPB8vZNqUxNjWwJ3ncm
+        zGVGS74B475P/l3wb+z35pt+HrrpZPCeVVKqMvMymGdX819D+mxb46ZGbJhrJu/thHuMgyDkZDgD3Lt3
+        kmsx790npSrZaEO4g9w3YlCYTYMMdiuw/zobu2YKTocdoV7hCWBd3Zbrjj0Hs+X0pUGM9KstwLryt9RO
+        MeD7Ukkj7s37HfA9q6QR1WTA96TSRpoO+ElV2sjD4EljhE9Dt3PMJSlVqdGAL2lkCXAu8Mw3ZHSzfhue
+        r8XcQTp/9KySRo4D69o6pSq5QDRPdjOjJfcvnqwslFI9qKQRZ+RPwMlUOWv/Ai48PYjwMDu0N9iubkug
+        CSplZDWwnvNTqtKRYN4O8A5oNOQhhOYuTakeVMqIBqxHQyHHwBdgBHNb6/jJP/54CKHBfC3XUSWM2NBP
+        IX/iq4ID3O2rOgBsx3YpVelEMM813TpmdFMJI9uAdTjYQ55lmbd6Ss2KaLemVCXH0hngOLKbGaY7trNu
+        xEnoFYgJ63h4rLpMctnucWfoOnDRGHJ54ZMMOYs7wG2kjVWW/Rnkb0jdDZ6abJxSs+S2wJDtb5py3CwC
+        E1Q3YqNMG1GU50oex4Qeh7eryySvX6wuk2yg94QsS5wIQzFzuyTPNR08fRT3O3W5h/eheu974MQ5rrqR
+        U+AHiCX4VfBRdZl0D7xQXSZ5duvns9BbcG11mWRZlr97SlVymeK+vN05l2PBQ267km9oTahrT7DM01Kq
+        pboRX3t+/upZbV6hRzP5a3XCWqC6TPIpeU/ITwbu6+PB+BlhJtgFO8n6IoppyKOgDSDk2HG9lo+n8YnH
+        6GHEGCbO1C7b8zfkiaH19TLR+XC9N05V7NZ7gVtnyzgMxuWTeg78YVT4ITRkXXadfj5HLwt+MPUtRJl2
+        zwhI43LC2RyMWMPEbmX3iCXJSuCT7Xm2rsmN2VYQIbuYYvw5KO3jsaYa6BPbfyGDgKE5uoNv4yz4X8qx
+        sAscA/6/lym119jYv67iuyBg7/8zAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABeNJREFUaEPtmmWoNVUUhq+JXSjYrYjYiWJ3gQiKKIoBip0oJopYWCiKhX52Fyp2
+        o6g/VNAfioWJ3d36PHPOuu47zpwz58yc+e4PX3i4s/eZWrP3rL3Wmjv2vyZqbtgU9oIjYX/YCdaEGWBS
+        axrYGZ6EP+DvEn6AO2BjmDSaFnaH++F98EY/gHNhB1gZloRlYW1whK6Eb8B974EFYapqFngUvKEv4XHY
+        D6aHfpoNToGf4WNYHqaargaNOB1mtGMIOUoa8hksYkfbWhr+hJuyVj2tBT/CE+BUbVWHg6PhE02lR6oy
+        tfI6AjzfjlmrRV0Bv0B601uBHukLOAnmg6ryPO/AS1mrRd0An3Q2M80Ln8Lr8BT4dDX0VtCrLQW9po2O
+        40LwuOXsaEu3w3udzUyXgu/MOlmrM+WuhW/Bm5OfQNf8dpeHYTqYA+yP/Zy2rcmX3BEI7QsHdzYnSG+2
+        EfgOXAaO0CNdbLuI6jg0wL7rwP1b03nwFzQRbmiMi6lTsnUdBz5FY6omdDH8BjNlrZa0D7iIaUhTFz4Q
+        PN9z4FQbufROvrS6SsOTprQKvAHfwZ12jFquFT65LbNW89IZfNjZHK3CkG2yVvPSEF/8kcuQW29loNi0
+        XDAdjYeyVgt6GoxW589azUkn4mjvnbVakKv3r2CIsrkdDeh8MDJ4AYYJOofWJvA5ODp1FSu7U0qv2LpO
+        A9+Xun7f983zmA5XkSGM6bKRwCVgQaOWFgOngyH9sJoTvoaqa9JRoNHfw8tgQvY77Am1pBGGFitmrcF1
+        Fnhj62et3joaYgrOYwdaCIwGfKC1nISey1D9WRg0gFwdfJquHf0URjwA+bDIUfX6QxtjJeRUMGTxIhdA
+        VZk9vgse9yZsC2VyOrmfnG1HgVJj9rCjigy7dwEXr3hKUVE5A/rJUYz5fSKYoMV58mWhMMLfbu5unwlF
+        0pjnwaWhb3lpDXBOesLXwJBFuSqbEdp/N5QV3bYGH4BpcBw7M8TIOtXOgbnAUqvn0xmYRZpN9jPGlNrf
+        rRkUagHQ5Tl0ntiL5GtZjpT9PhFv9EY4CHaF4+FF8CJGuatBXouC74v7RCXSGoB/7wOvV8WYr+D6zua/
+        8uYOAMNrjdCYfouWxQPTWKeOFww04BCYFXppCrj/g+BoHdNtW5btZ4y1AvtPzlpdeZDVEn9w7q0KZbKm
+        682ni6PHrwTrwhJ2dOXD2R5uAdeiVFEv08VqRKiKMYuDeZKj6Qwal4UAd7Qg7YG95Kg5v+UqcK7mFQZY
+        u/K8H0G632FQZESolzEXgUY4CzaEce0G7nBN1qomR0MjUoOsxIcB8Y6YJh8K6c1qhAujJSJrXGUqMuau
+        bp9GTKjAuODoWfRKvU5aprxBvhtlBij7qhgRSo1ZBmIk/vO9JUbDeV9HYZCGFBmgfPk1wppWGOH81ssV
+        7R8KY3xQhUao20AX1utETciCnkYYMKZGOBN04XlHkEpX7TcZjfATX6EMHUZdLAsjHoMiI7azo0R+R7Hk
+        2tMI5VekQV7yQWUNSyP8wjWMEW+BRmxmRy8596z8jUJW5jXCGz4W/NLr/K5ixMIQRlRKsfOG6Jdn72xm
+        8klEKK3726L7V9mfPimP26CzmcmXuuiL7yBGeL1KSg0xHDE00eso01F/jy9L5u62/avst61bVB7n8RHW
+        GDsZemiwa8x6YMHhFSiTRhjqG1RWNkKlhugdbOvulJmgbQNBZR5hO/IJ+21Hxhhu0vMo37/LO5vjuhcc
+        JT2lq35aRUmNGLi66YXDEMNz09mIVnXJhi4RWpggGY/FE3ft8Pdw3R7n8Z7HfT33CZDK+W6c9gz4uzev
+        /OsapPFDlWjNwV3ImpaprTfqR6EixWj6lddcvJYRylDBfML/SjA/aAprYN6oVcoVIC/jJH93jdGINPka
+        SmZ3RpXOzfje1wQmZN5omTHhSJwRtY0YpSJhSo3x3zhM1gwAXwX7NcKUeNIqPlvn0SPplv2vIh3FhHxi
+        Mspqu6Pi90dXdL9SNfUNMqexsX8A99LST+ILccEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABclJREFUaEPt2mWIbVUYxvExsQMUAwPjqojdCnbrBwMDRQUVuxVEFFTEALERMbHw
+        2oKNgY36wUAUBEXsbrH7+e0za9gznpg4s2c++MCfu9ees+Nd8cbad+B/DdfCYetwYDgpHBH2DOuHOcK0
+        1ixh7/BU+DP804Efw91hyzBtNGvYPzwUPghe9MNwUdgtrBmWDyuFDYMRui58F/z2vrBkmFLNEx4PXujr
+        8EQ4PMweemm+cFb4JXwaVg1TphsCI84NczoxDhklhnwRlnaiaa0Y/gq3Vq2JaYPwU3gymKqN6oRgNPRo
+        XTzSaKbWSJ0Y3G+vqtWgrg2/hvpL7xB4pK/CGWHRMFq5z7vh1arVoG4Jn7UOKy0SPg9vhWeC3mXoHYFX
+        WyF0mzYcx2XBdas40ZTuCu+3DitdGcSOjavWwMBG4abwQ/By+Dlwze8M8miYLSwQnC+/M20bk0VuBIoO
+        Dce0DoeJN9siWANXBSP02CDagijHwQCunPF+35gEvL9DP9INxgimpmTjOjXoRTlVP2Rq/hHmqloN6ZAg
+        iDGkXw8+OrjfC8FUm3QtFqQVXKU53S+tFXg8zuEeJyZb2wc9t03V6r84g49ah5OrbQNDdqxa/dedwcKf
+        dEm5eSuJYr8lYBqNR6pWA3o2yFYXr1r9EyditA+qWg1I9P4tSFFMtX5IeiKbfimMJ+kct7YKXwajM1GV
+        yG5Kydka1znBepmo37fe3Ec5PCVaNpgOUvrxasHwbehnTBqXGPF7WL1qjV3nB6OxadWaQvFc34fnw1gT
+        yHWD/EoQnFLZCTk7qDMs1kvDaKV6fC+47u2wc2hc0u59guDlRR4OZUflvNBLRvG1YMPh9KBAK/dpbFto
+        vSBD9eA3gzqdRGVFkfP3hk6bblIbHaAMLtcqc8vImmoXhIXCpGiJYIeQl+Jl7OeO3MsyUs4Lll50ZpCe
+        7xtOCy8Hhspy1wkjtUy4LfiNGHVYKHX+vGG1IGndLHDVY9o68nJHBuk1IxjTK2jZPFDGmjpeqsCAY4OX
+        6ial7ivBNSL9/UHpUL8XlNpXh5VDV+lxuyUuejGsHTrpgHB5qAdH168RNgnLOTEonbNLUHfUz9dlakqB
+        PFtex83bN94puPb48GAw8qaj0ruj17w5uNGFwW5HNxk1N8T1wfbPSBUDSm9/Etr9TofZVTGiJ4e5QyeZ
+        jrcH97P3LMAO037BH2+sWqOT0WBE3SA78cWAskaUyceFdi/IMCPwcWi3jjrJDo7Aand/qNPV4TwLr8Sj
+        jFUjDbI2ehlADH4uGIlORvhgZM+sncqGiGdUKqNhTk5ExSCGdDOgaPfguaZTJ/GYpnw76QihwZZtNcWU
+        m9+EXg/ut2zamVbddmZ8IOKAOqmU4gdrSB2edtCgTGHT8Jqq1Vm9DLE+dIagXPnssSzyfshH0qGe7KJe
+        hpC4I3+rbniFgwYlPnhuSVvIwvZJzzQv8Ewyh/o5rrpelBlVg/EfQzYP87cOK9nTKvPYUG43+C85X9/z
+        cp2UokhWUPc6SwWbc67xXB9Qi3xEkiHUYYTerp+7JNS3biWwOmCYIR4sNSkujeX+vkfVatXu2v4l57Vn
+        VK3Wda4vaY1CSnJYJOXxYrJe1w25zg4azdTyefwNB3VDRE7tU6pWqxLUlgiSOkK71BPOa5eK0XXa7kPu
+        q13kpaTxEkCuVdrRTb0M4XalLUaqelAxxAPkOSVAccn8eEktFEhuXHpc7PD34rpd5/qSqfpPAhe3Divt
+        Gs5sHVYJoKljL6CTehlyVPD+1U6oGlwga1qmFxcsle8kGUd9/dalhpFoSoWqjvNJzPDIW9TTTWKR6lF1
+        TDtJ2dt9k7GpJ6D6/Df0xUsKrVcswvK9r0kENA5C7iTt6CWG6Xwd4BPftJHCy2zwYnInaUe7MsJHVGtC
+        gWUkVKfTTl5cjaPkZZB/HwiCnayDi+UY/E19M+X7Yr3EncrC5U6yaDFINH89cLG8U5vafWDgX6orrhRA
+        VZgjAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABnJJREFUaEPt2gmobVUdx/FXWU5JmAPmnJbimKWmOaeillkqiqKSphYOWWma84Sl
+        WY4oJSZCqFjOEpYjaoViiSMimZEaKplSas7j77Pu2/esuzn33nPPvvfpA3/w5e2179lrrb3Wf/3Xf/33
+        m/WBPtD7Xx8Pm4T9wsnh4nBFuGk2rt3zN7/xW8+85/pQ2Dj8NNwf3grvVPwv/CM8PBvXz4f6N28Gz54S
+        NgzqnGNaPBwbHg0683b4azgt7BpWCwuG8eRvfrNbOD3cE9ShLnUeExYLM6ZFw5nhpaDRu8N3wxKhq9Sh
+        LnWq+//BS2pz2vThcGD4b2A+V4Z1wmQy8isEo79KWCYMsibWDVcHs/Rc2D90NjkjZaEapTuDRvppvrB1
+        YF63hWeDZ/rxdLg1nBq2DJ7tp/XDXcEzN4ahZ96oPxVeDYeGfqPyhXB+eDE0Hf1n+G04OxwXDgjfCYeF
+        Hwfe66HQrAtO4bzwudAWa/hReD3oy9phStomsFOj128W1gi/DzrC3K4NewTmM6gsaM7hmqCjr4UFQj+t
+        F/TFgJnFgcQNWtB/C8u6Uemj4WfhjaDSn4dPh65aMmwwclm0cph35HJU2vl70DdmN6GWDxbYY2FpNyp9
+        KvwlNDbrtzOh+YOBuiO0vZaB/VewBtuDPCqjraPemOnU+kx4PJj+b4eZ3rj2CczNvrKcG5XWCvroRedx
+        o60fBqO9dyn1ZNot4JfDtm4MoYODkWSWg2qLYIHvUEpjxXno6w9KqZIpfCFwnfVoe+M/BTOxmRtDSt0a
+        xsJudJQ+6peQZ4z5nRQ00t7omlkS5HXRpUE9fw7DmOWJgVesxZOp8/hSioz6M+HmUurJm3rj9iwNI/vB
+        iuEjpTR1XRfsN58spZ707d+h1MsWvdmeCpUEb+5P6uomEBe6aeD7IVwZRlyzvhxdSj1Zz+5/WcFeYFNr
+        2+4jgRfrIh5OQw080cfCMLo32NtqLRJECMWJ3BLaP+BuNXxEKQ0vQaKoVl1CmXrTm6qODOpp718GXDxY
+        3KL4p9bOwUNlyjrqq0Fd/u2izYN6diqlnkTK9rgSavzKRSX+ud/bD6NmRsxyF3EW6vleKfV0QfAOxW5/
+        6aISk/IQG+yqc4KQQ+TQRU6m+nR4KfX0i6D+ElVe5qKSt/bQdASEomTBXletGfTpW6XU0yXB9jHrwcAf
+        1/pG8JDDUld5CS/TVc1a26qUevpjeMDFRUEIUQdgIl1hyY6lNLyYk2lnXl11RpB1YWKNbLT6/muFJgD7
+        okKl6YiJGjduwXeRyELgensp9fSloP4SQlkHNkRZi/FkFNrhwSCaLtcrAlaPJEits4K+j57n/xBkSfod
+        NfcK3JvAb1CZCXuRTVAHhPFfCX3PD5NIJGCdmZE6UWGz1efrS2m2vh40KEFQS8POIRJwn3VjQMmSqK/N
+        MDu7EMqzzve1xF3uixVHxQZ5LiPfTiA4UtZR6yD7gcNYEyg2CD4tzqnom0FnOaRaNmqnxBKatLV64GFu
+        COOF287xptj5YKbFpHlO1lCbPCvhcqWpJCn6qjlIcXX9xB5V3iW0n0w6+pOgH5KC7TywBe5vMpDjion9
+        JvihxFhbYjCbZSNT7NAzjEfrJ6e++4L2pWZlVGpJ+PnbhaU0iTyscx7wyWCi06EKmWPj/pikM8hCpTSi
+        lcJke9JG4fLAlUr1MKu6XWtLOlafRLsDnzS5vKuCB2URx8uKOwvUkbNF7Zk6tBFit4NSHbGZWWsOTJ6R
+        2Tw3tE1J2/rgN3bwKR/MNOY7iLBAWuZroS0bZV3xQUGDdcjuZe1TjXg9CUC/gziJGfebNRuhts26vkxk
+        HZPK4cqoatT+8PkwnrzAUSOXo1KuzxA6Yw/YN7SzmY0kqzkWbdoMpXGnRdaNxk2/GRrX7XWQmeJIuH8v
+        oC2zMN5nh04S62hk1VLqLubEfKwzaR11Czu43xn9/Nb490+U0lhJ7sm6WJg+0R0SRNa7BHGX6+8Hf+Na
+        m2+QeCVYR7uHtsudEf0uPDlyOUbcrS+3QhzJDG606WQbf1OHjL6B2S5M9PF02mWRmn5uuRavJaUkv6RT
+        5J4suqy+D0VwVHVvyu5zutUcYuozARu3OL2E8GaukBiHx1qqlEY+MTwR3GP/c4WMvIS2sHn74MhpdkTC
+        EmdzjU4IOt58if1PsK/MEQ8zneKtpPWlVv3Xi/aHyrlGzgjDnLfnkGbNehd0S5WEFKmj1gAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAA6xJREFUaEPtmVnIDlEYxz9LlpItEcqWXaHsIYVCpGQrF0RRhAtFIuWClEjZshQi
+        shRZQkShSETIpShL4sa+i//vnDmfY755e7d5x6j516/3PM+ZOed55p05Z86ZqpjVU6wQl8Qz8Un8CqD8
+        VFC3XHBsqlRLTBIPhQv6ZfB7TawPoOzXwQPBuf9cXNUbgqD4B5aJbqJd4JsvnCjjo6674Njnge+6+Gf/
+        0ATxTnwQC0U94ZQvEaf6YrH4KN6K8SJRzRE/xF3RBUdILpHNYmoA5XAiTvyLtEWbs3EkoRHiq7glmuDw
+        1EFsEe6WiYI6juFYX83EbUHbw3FUUm3EK/FI+EnUEasFQXwTF8QSwYM8OoAyPuq+C47lHM51aioeC/po
+        jaNS2i0IYrCxrHg2zgmu9knRWeQTx5wSnMO5/vM1RHCL7TRWBcSoQgdbjfVHxwUBMTcUI4btlYJzj+Hw
+        tF1wwXoYK2btEDTe3lhWPPQEss5YpYk5hjZmGcuqo6CvbcaKUbUFD+kJY1lxO7wQTGr+fV6s6gomU9ry
+        b7Ezgj7552LTIMFV8+eFGQLfZGOVpymCtqYby2qBwDfQWDGJCY9G/Xv2gHgvGhirPDUUTKz7jGXVS9An
+        CcWmTYJGGxvL6r64YouxiHexe7ZoxFBMnxuMFZMYdj/bYrV4+Ttqi7GItmjTF33ussV4dFC8scVqYeOP
+        S0n0kSVSjCrWB68R7j2JVR2jirMBG7/vK4dC+ijk9ecvMYszYqSRgmf7voITjgi3lkgLjGzE1lvkFas0
+        Dq74mqAEEROxFbSSdIkMM1a6RExZIpUWMzeDyyjBmmeVOC1airBSnQgrQZbH9Om4I1qJsFKdCGouLgu2
+        hdjzyqXUJ4KiZvawskRyiQVWP1usoa5igC3WEJt5rDajlHgiI8VPwTEzcXgaKthpoW4uDk/9BRsK1C3C
+        EYj9gKWCdfsXsUZE7UaiWBNhr5Z62IjD0zzh6sLvRCTt6vbgCNRCsO/r6rhI00SUYk2E5e4hwWZcWxye
+        Gon9gh0Qf9sIsS7fK86KTjhCyh72XMoSKVP/fSLsXzFovBaMeIfFRBGlVCfyRDBSXRUs5lje0n8fEVaq
+        E2EC5buLE6Nbrkkz1YkUoyyRtKnkRJipLwo+UiaBe63hg+tN4fzEQCwlJ8KDxxYMDSXBWoF42M8L5ycG
+        YikqkbGCg/lNm8YJYhtjrDxircwHHD6FcSXSBDERW9TGRKRYczBB8T09TRATsWXKlIyqqn4DKVfNLwH7
+        lZAAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
