--- a/RabtBil-Musteri-Kayit-v2/FrmAnaMenu.resx
+++ b/RabtBil-Musteri-Kayit-v2/FrmAnaMenu.resx
@@ -296,7 +296,7 @@
         lZAAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnKapat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAnRJREFUSEvFldmrTVEcgLdZZiJCpGTIEGXI8GCIB0MkUUpk9oBQ8uLBULyQeyNF
